# configuration-parser

./: CMakeLists.txt  ConfigurationParserConfig.cmake.in  README.md  README.txt  dump-kconfig.cpp  dump-kconfig.h  dump-qobject.cpp  dump-qsettings.cpp  dump-qsettings.h  dump-settings.cpp  dump-settings.h  dump_common.cpp  dump_common.h  main.cpp  meta-qobject-parser.cpp  meta-settings.h  statemachine.cpp  statemachine.h  statemachineV2.cpp  string-helpers.cpp  string-helpers.h  subsurface-configuration.conf
.reuse/: dep5
cmake/: ConfigurationCompiler.cmake
common/: dump_common.cpp  dump_common.h
kconfig/: dump_kconfig.cpp  dump_kconfig.h
parser/: statemachine.cpp
qobject/: dump_qobject.cpp
qsettings/: dump_qsettings.cpp  dump_qsettings.h
test/: CMakeLists.txt  demo_qsettings.conf  test-class-array-header.expected  test-class-array.conf  test-class-array.cpp  test-empty-class.cpp  test-empty-prefs-header.expected  test-empty-prefs.conf.cpp  test-includes-header.expected  test-includes.conf  test-includes.conf.cpp  test-includes.conf.h  test-includes.cpp  test-namespace.conf  test-namespace.conf.cpp  test-namespace.conf.h  test-properties.conf  test-properties.cpp  test-scopped-preferences-header.expected  test-scopped-preferences.conf  test-scopped-preferences.conf.cpp  test-scopped-preferences.conf.h  test-scopped-preferences.cpp  test-simple-inner-pref-header.expected  test-simple-inner-pref.conf.cpp  test-simple-inner-pref.conf.h  test-simple-prefs-aggregate-value.conf  test-simple-prefs-aggregate-value.conf.h  test-simple-prefs-default-value.conf  test-simple-prefs-default-value.conf.h  test-simple-prefs-header.expected  test-simple-prefs.conf  test-simple-prefs.conf.h  test.conf  unittests.cpp
